Quality of life improvments

--- a/src/main/resources/assets/charta/lang/en_us.json
+++ b/src/main/resources/assets/charta/lang/en_us.json
@@ -25,6 +25,9 @@
   "block.charta.acacia_card_table": "Acacia Card Table",
   "block.charta.acacia_game_chair": "Acacia Game Chair",
 
+  "item.charta.deck": "Deck",
+  "item.charta.iron_lead": "Iron Lead",
+
   "deck.charta.fun": "Fun Deck",
   "deck.charta.standard_black": "Standard Black Deck",
   "deck.charta.standard_red": "Standard Red Deck",
