--- a/src/main/resources/assets/charta/lang/en_us.json
+++ b/src/main/resources/assets/charta/lang/en_us.json
@@ -4,26 +4,55 @@
 
   "block.charta.oak_card_table": "Oak Card Table",
   "block.charta.oak_game_chair": "Oak Game Chair",
+  "block.charta.oak_bar_stool": "Oak Bar Stool",
+  "block.charta.oak_bar_shelf": "Oak Bar Shelf",
   "block.charta.bamboo_card_table": "Bamboo Card Table",
   "block.charta.bamboo_game_chair": "Bamboo Game Chair",
+  "block.charta.bamboo_bar_stool": "Bamboo Bar Stool",
+  "block.charta.bamboo_bar_shelf": "Bamboo Bar Shelf",
   "block.charta.dark_oak_card_table": "Dark Oak Card Table",
   "block.charta.dark_oak_game_chair": "Dark Oak Game Chair",
+  "block.charta.dark_oak_bar_stool": "Dark Oak Bar Stool",
+  "block.charta.dark_oak_bar_shelf": "Dark Oak Bar Shelf",
   "block.charta.mangrove_card_table": "Mangrove Card Table",
   "block.charta.mangrove_game_chair": "Mangrove Game Chair",
+  "block.charta.mangrove_bar_stool": "Mangrove Bar Stool",
+  "block.charta.mangrove_bar_shelf": "Mangrove Bar Shelf",
   "block.charta.warped_card_table": "Warped Card Table",
   "block.charta.warped_game_chair": "Warped Game Chair",
+  "block.charta.warped_bar_stool": "Warped Bar Stool",
+  "block.charta.warped_bar_shelf": "Warped Bar Shelf",
   "block.charta.crimson_card_table": "Crimson Card Table",
   "block.charta.crimson_game_chair": "Crimson Game Chair",
+  "block.charta.crimson_bar_stool": "Crimson Bar Stool",
+  "block.charta.crimson_bar_shelf": "Crimson Bar Shelf",
   "block.charta.jungle_card_table": "Jungle Card Table",
   "block.charta.jungle_game_chair": "Jungle Game Chair",
+  "block.charta.jungle_bar_stool": "Jungle Bar Stool",
+  "block.charta.jungle_bar_shelf": "Jungle Bar Shelf",
   "block.charta.cherry_card_table": "Cherry Card Table",
   "block.charta.cherry_game_chair": "Cherry Game Chair",
+  "block.charta.cherry_bar_stool": "Cherry Bar Stool",
+  "block.charta.cherry_bar_shelf": "Cherry Bar Shelf",
   "block.charta.birch_card_table": "Birch Card Table",
   "block.charta.birch_game_chair": "Birch Game Chair",
+  "block.charta.birch_bar_stool": "Birch Bar Stool",
+  "block.charta.birch_bar_shelf": "Birch Bar Shelf",
   "block.charta.spruce_card_table": "Spruce Card Table",
   "block.charta.spruce_game_chair": "Spruce Game Chair",
+  "block.charta.spruce_bar_stool": "Spruce Bar Stool",
+  "block.charta.spruce_bar_shelf": "Spruce Bar Shelf",
   "block.charta.acacia_card_table": "Acacia Card Table",
   "block.charta.acacia_game_chair": "Acacia Game Chair",
+  "block.charta.acacia_bar_stool": "Acacia Bar Stool",
+  "block.charta.acacia_bar_shelf": "Acacia Bar Shelf",
+
+  "block.charta.empty_beer_glass": "Empty Beer Glass",
+  "block.charta.empty_wine_glass": "Empty Wine Glass",
+  "block.charta.wheat_beer_glass": "Wheat Beer Glass",
+  "block.charta.sorghum_beer_glass": "Sorghum Beer Glass",
+  "block.charta.berry_wine_glass": "Berry Wine Glass",
+  "block.charta.cactus_wine_glass": "Cactus Wine Glass",
 
   "item.charta.deck": "Deck",
   "item.charta.iron_lead": "Iron Lead",
