Add dealer table

--- a/src/main/resources/assets/charta/lang/en_us.json
+++ b/src/main/resources/assets/charta/lang/en_us.json
@@ -2,6 +2,8 @@
   "charta.cards": "Cards",
   "charta.crazy_eights": "Crazy Eights",
 
+  "block.charta.dealer_table": "Dealer Table",
+
   "block.charta.oak_card_table": "Oak Card Table",
   "block.charta.oak_game_chair": "Oak Game Chair",
   "block.charta.oak_bar_stool": "Oak Bar Stool",
