Add banner patterns.

--- a/src/main/resources/assets/charta/lang/en_us.json
+++ b/src/main/resources/assets/charta/lang/en_us.json
@@ -56,6 +56,78 @@
   "block.charta.berry_wine_glass": "Berry Wine Glass",
   "block.charta.cactus_wine_glass": "Cactus Wine Glass",
 
+  "block.minecraft.banner.charta.spades": "Spades",
+  "block.minecraft.banner.charta.spades.black": "Black Spades",
+  "block.minecraft.banner.charta.spades.blue": "Blue Spades",
+  "block.minecraft.banner.charta.spades.brown": "Brown Spades",
+  "block.minecraft.banner.charta.spades.cyan": "Cyan Spades",
+  "block.minecraft.banner.charta.spades.gray": "Gray Spades",
+  "block.minecraft.banner.charta.spades.green": "Green Spades",
+  "block.minecraft.banner.charta.spades.light_blue": "Light Blue Spades",
+  "block.minecraft.banner.charta.spades.light_gray": "Light Gray Spades",
+  "block.minecraft.banner.charta.spades.lime": "Lime Spades",
+  "block.minecraft.banner.charta.spades.magenta": "Magenta Spades",
+  "block.minecraft.banner.charta.spades.orange": "Orange Spades",
+  "block.minecraft.banner.charta.spades.pink": "Pink Spades",
+  "block.minecraft.banner.charta.spades.purple": "Purple Spades",
+  "block.minecraft.banner.charta.spades.red": "Red Spades",
+  "block.minecraft.banner.charta.spades.white": "White Spades",
+  "block.minecraft.banner.charta.spades.yellow": "Yellow Spades",
+
+  "block.minecraft.banner.charta.hearts": "Hearts",
+  "block.minecraft.banner.charta.hearts.black": "Black Hearts",
+  "block.minecraft.banner.charta.hearts.blue": "Blue Hearts",
+  "block.minecraft.banner.charta.hearts.brown": "Brown Hearts",
+  "block.minecraft.banner.charta.hearts.cyan": "Cyan Hearts",
+  "block.minecraft.banner.charta.hearts.gray": "Gray Hearts",
+  "block.minecraft.banner.charta.hearts.green": "Green Hearts",
+  "block.minecraft.banner.charta.hearts.light_blue": "Light Blue Hearts",
+  "block.minecraft.banner.charta.hearts.light_gray": "Light Gray Hearts",
+  "block.minecraft.banner.charta.hearts.lime": "Lime Hearts",
+  "block.minecraft.banner.charta.hearts.magenta": "Magenta Hearts",
+  "block.minecraft.banner.charta.hearts.orange": "Orange Hearts",
+  "block.minecraft.banner.charta.hearts.pink": "Pink Hearts",
+  "block.minecraft.banner.charta.hearts.purple": "Purple Hearts",
+  "block.minecraft.banner.charta.hearts.red": "Red Hearts",
+  "block.minecraft.banner.charta.hearts.white": "White Hearts",
+  "block.minecraft.banner.charta.hearts.yellow": "Yellow Hearts",
+
+  "block.minecraft.banner.charta.clubs": "Clubs",
+  "block.minecraft.banner.charta.clubs.black": "Black Clubs",
+  "block.minecraft.banner.charta.clubs.blue": "Blue Clubs",
+  "block.minecraft.banner.charta.clubs.brown": "Brown Clubs",
+  "block.minecraft.banner.charta.clubs.cyan": "Cyan Clubs",
+  "block.minecraft.banner.charta.clubs.gray": "Gray Clubs",
+  "block.minecraft.banner.charta.clubs.green": "Green Clubs",
+  "block.minecraft.banner.charta.clubs.light_blue": "Light Blue Clubs",
+  "block.minecraft.banner.charta.clubs.light_gray": "Light Gray Clubs",
+  "block.minecraft.banner.charta.clubs.lime": "Lime Clubs",
+  "block.minecraft.banner.charta.clubs.magenta": "Magenta Clubs",
+  "block.minecraft.banner.charta.clubs.orange": "Orange Clubs",
+  "block.minecraft.banner.charta.clubs.pink": "Pink Clubs",
+  "block.minecraft.banner.charta.clubs.purple": "Purple Clubs",
+  "block.minecraft.banner.charta.clubs.red": "Red Clubs",
+  "block.minecraft.banner.charta.clubs.white": "White Clubs",
+  "block.minecraft.banner.charta.clubs.yellow": "Yellow Clubs",
+
+  "block.minecraft.banner.charta.diamonds": "Diamonds",
+  "block.minecraft.banner.charta.diamonds.black": "Black Diamonds",
+  "block.minecraft.banner.charta.diamonds.blue": "Blue Diamonds",
+  "block.minecraft.banner.charta.diamonds.brown": "Brown Diamonds",
+  "block.minecraft.banner.charta.diamonds.cyan": "Cyan Diamonds",
+  "block.minecraft.banner.charta.diamonds.gray": "Gray Diamonds",
+  "block.minecraft.banner.charta.diamonds.green": "Green Diamonds",
+  "block.minecraft.banner.charta.diamonds.light_blue": "Light Blue Diamonds",
+  "block.minecraft.banner.charta.diamonds.light_gray": "Light Gray Diamonds",
+  "block.minecraft.banner.charta.diamonds.lime": "Lime Diamonds",
+  "block.minecraft.banner.charta.diamonds.magenta": "Magenta Diamonds",
+  "block.minecraft.banner.charta.diamonds.orange": "Orange Diamonds",
+  "block.minecraft.banner.charta.diamonds.pink": "Pink Diamonds",
+  "block.minecraft.banner.charta.diamonds.purple": "Purple Diamonds",
+  "block.minecraft.banner.charta.diamonds.red": "Red Diamonds",
+  "block.minecraft.banner.charta.diamonds.white": "White Diamonds",
+  "block.minecraft.banner.charta.diamonds.yellow": "Yellow Diamonds",
+
   "item.charta.deck": "Deck",
   "item.charta.iron_lead": "Iron Lead",
 
