--- a/src/main/resources/assets/charta/lang/en_us.json
+++ b/src/main/resources/assets/charta/lang/en_us.json
@@ -137,5 +137,134 @@
   "deck.charta.standard_blue": "Standard Blue Deck",
   "deck.charta.standard_green": "Standard Green Deck",
   "deck.charta.standard_yellow": "Standard Yellow Deck",
-  "deck.charta.inverted": "Inverted Deck"
+  "deck.charta.inverted": "Inverted Deck",
+
+  "suit.charta.unknown": "????",
+
+  "suit.charta.spades": "Spades",
+  "suit.charta.hearts": "Hearts",
+  "suit.charta.clubs": "Clubs",
+  "suit.charta.diamonds": "Diamonds",
+
+  "suit.charta.red": "Red",
+  "suit.charta.yellow": "Yellow",
+  "suit.charta.green": "Green",
+  "suit.charta.blue": "Blue",
+
+  "card.charta.unknown": "????",
+
+  "card.charta.spades.ace": "Ace of Spades",
+  "card.charta.spades.two": "Two of Spades",
+  "card.charta.spades.three": "Three of Spades",
+  "card.charta.spades.four": "Four of Spades",
+  "card.charta.spades.five": "Five of Spades",
+  "card.charta.spades.six": "Six of Spades",
+  "card.charta.spades.seven": "Seven of Spades",
+  "card.charta.spades.eight": "Eight of Spades",
+  "card.charta.spades.nine": "Nine of Spades",
+  "card.charta.spades.jack": "Jack of Spades",
+  "card.charta.spades.queen": "Queen of Spades",
+  "card.charta.spades.king": "King of Spades",
+  "card.charta.spades.joker": "Joker of Spades",
+
+  "card.charta.hearts.ace": "Ace of Hearts",
+  "card.charta.hearts.two": "Two of Hearts",
+  "card.charta.hearts.three": "Three of Hearts",
+  "card.charta.hearts.four": "Four of Hearts",
+  "card.charta.hearts.five": "Five of Hearts",
+  "card.charta.hearts.six": "Six of Hearts",
+  "card.charta.hearts.seven": "Seven of Hearts",
+  "card.charta.hearts.eight": "Eight of Hearts",
+  "card.charta.hearts.nine": "Nine of Hearts",
+  "card.charta.hearts.jack": "Jack of Hearts",
+  "card.charta.hearts.queen": "Queen of Hearts",
+  "card.charta.hearts.king": "King of Hearts",
+  "card.charta.hearts.joker": "Joker of Hearts",
+
+  "card.charta.clubs.ace": "Ace of Clubs",
+  "card.charta.clubs.two": "Two of Clubs",
+  "card.charta.clubs.three": "Three of Clubs",
+  "card.charta.clubs.four": "Four of Clubs",
+  "card.charta.clubs.five": "Five of Clubs",
+  "card.charta.clubs.six": "Six of Clubs",
+  "card.charta.clubs.seven": "Seven of Clubs",
+  "card.charta.clubs.eight": "Eight of Clubs",
+  "card.charta.clubs.nine": "Nine of Clubs",
+  "card.charta.clubs.jack": "Jack of Clubs",
+  "card.charta.clubs.queen": "Queen of Clubs",
+  "card.charta.clubs.king": "King of Clubs",
+  "card.charta.clubs.joker": "Joker of Clubs",
+
+  "card.charta.diamonds.ace": "Ace of Diamonds",
+  "card.charta.diamonds.two": "Two of Diamonds",
+  "card.charta.diamonds.three": "Three of Diamonds",
+  "card.charta.diamonds.four": "Four of Diamonds",
+  "card.charta.diamonds.five": "Five of Diamonds",
+  "card.charta.diamonds.six": "Six of Diamonds",
+  "card.charta.diamonds.seven": "Seven of Diamonds",
+  "card.charta.diamonds.eight": "Eight of Diamonds",
+  "card.charta.diamonds.nine": "Nine of Diamonds",
+  "card.charta.diamonds.jack": "Jack of Diamonds",
+  "card.charta.diamonds.queen": "Queen of Diamonds",
+  "card.charta.diamonds.king": "King of Diamonds",
+  "card.charta.diamonds.joker": "Joker of Diamonds",
+
+  "card.charta.wild": "Wild Card",
+  "card.charta.wild_plus_4": "Wild +4 Card",
+
+  "card.charta.red.one": "Red One",
+  "card.charta.red.two": "Red Two",
+  "card.charta.red.three": "Red Three",
+  "card.charta.red.four": "Red Four",
+  "card.charta.red.five": "Red Five",
+  "card.charta.red.six": "Red Six",
+  "card.charta.red.seven": "Red Seven",
+  "card.charta.red.eight": "Red Eight",
+  "card.charta.red.nine": "Red Nine",
+  "card.charta.red.jack": "Red Ten",
+  "card.charta.red.queen": "Red Block",
+  "card.charta.red.king": "Red Reverse",
+  "card.charta.red.joker": "Red +2",
+
+  "card.charta.yellow.one": "Yellow One",
+  "card.charta.yellow.two": "Yellow Two",
+  "card.charta.yellow.three": "Yellow Three",
+  "card.charta.yellow.four": "Yellow Four",
+  "card.charta.yellow.five": "Yellow Five",
+  "card.charta.yellow.six": "Yellow Six",
+  "card.charta.yellow.seven": "Yellow Seven",
+  "card.charta.yellow.eight": "Yellow Eight",
+  "card.charta.yellow.nine": "Yellow Nine",
+  "card.charta.yellow.jack": "Yellow Ten",
+  "card.charta.yellow.queen": "Yellow Block",
+  "card.charta.yellow.king": "Yellow Reverse",
+  "card.charta.yellow.joker": "Yellow +2",
+
+  "card.charta.green.one": "Green One",
+  "card.charta.green.two": "Green Two",
+  "card.charta.green.three": "Green Three",
+  "card.charta.green.four": "Green Four",
+  "card.charta.green.five": "Green Five",
+  "card.charta.green.six": "Green Six",
+  "card.charta.green.seven": "Green Seven",
+  "card.charta.green.eight": "Green Eight",
+  "card.charta.green.nine": "Green Nine",
+  "card.charta.green.jack": "Green Ten",
+  "card.charta.green.queen": "Green Block",
+  "card.charta.green.king": "Green Reverse",
+  "card.charta.green.joker": "Green +2",
+
+  "card.charta.blue.one": "Blue One",
+  "card.charta.blue.two": "Blue Two",
+  "card.charta.blue.three": "Blue Three",
+  "card.charta.blue.four": "Blue Four",
+  "card.charta.blue.five": "Blue Five",
+  "card.charta.blue.six": "Blue Six",
+  "card.charta.blue.seven": "Blue Seven",
+  "card.charta.blue.eight": "Blue Eight",
+  "card.charta.blue.nine": "Blue Nine",
+  "card.charta.blue.jack": "Blue Ten",
+  "card.charta.blue.queen": "Blue Block",
+  "card.charta.blue.king": "Blue Reverse",
+  "card.charta.blue.joker": "Blue +2"
 }
