Deck screen and remove all Component.literals :D

--- a/src/main/resources/assets/charta/lang/en_us.json
+++ b/src/main/resources/assets/charta/lang/en_us.json
@@ -1,11 +1,17 @@
 {
+  "itemGroup.charta.items": "Charta Items",
+  "itemGroup.charta.decks": "Charta Decks",
+
   "charta.cards": "Cards",
+  "charta.card": "Card",
+  "charta.suits": "Suits",
+  "charta.suit": "Suit",
+
   "charta.crazy_eights": "Crazy Eights",
 
   "entity.minecraft.villager.charta.dealer": "Dealer",
 
   "block.charta.dealer_table": "Dealer Table",
-
   "block.charta.oak_card_table": "Oak Card Table",
   "block.charta.oak_game_chair": "Oak Game Chair",
   "block.charta.oak_bar_stool": "Oak Bar Stool",
@@ -212,8 +218,9 @@
   "card.charta.diamonds.joker": "Joker of Diamonds",
 
   "card.charta.wild": "Wild Card",
-  "card.charta.wild_plus_4": "Wild +4 Card",
+  "card.charta.wild_plus_four": "Wild +4",
 
+  "card.charta.red.zero": "Red Zero",
   "card.charta.red.one": "Red One",
   "card.charta.red.two": "Red Two",
   "card.charta.red.three": "Red Three",
@@ -223,11 +230,11 @@
   "card.charta.red.seven": "Red Seven",
   "card.charta.red.eight": "Red Eight",
   "card.charta.red.nine": "Red Nine",
-  "card.charta.red.jack": "Red Ten",
-  "card.charta.red.queen": "Red Block",
-  "card.charta.red.king": "Red Reverse",
-  "card.charta.red.joker": "Red +2",
+  "card.charta.red.block": "Red Block",
+  "card.charta.red.reverse": "Red Reverse",
+  "card.charta.red.plus_two": "Red +2",
 
+  "card.charta.yellow.zero": "Yellow Zero",
   "card.charta.yellow.one": "Yellow One",
   "card.charta.yellow.two": "Yellow Two",
   "card.charta.yellow.three": "Yellow Three",
@@ -237,11 +244,11 @@
   "card.charta.yellow.seven": "Yellow Seven",
   "card.charta.yellow.eight": "Yellow Eight",
   "card.charta.yellow.nine": "Yellow Nine",
-  "card.charta.yellow.jack": "Yellow Ten",
-  "card.charta.yellow.queen": "Yellow Block",
-  "card.charta.yellow.king": "Yellow Reverse",
-  "card.charta.yellow.joker": "Yellow +2",
+  "card.charta.yellow.block": "Yellow Block",
+  "card.charta.yellow.reverse": "Yellow Reverse",
+  "card.charta.yellow.plus_two": "Yellow +2",
 
+  "card.charta.green.zero": "Green Zero",
   "card.charta.green.one": "Green One",
   "card.charta.green.two": "Green Two",
   "card.charta.green.three": "Green Three",
@@ -251,11 +258,11 @@
   "card.charta.green.seven": "Green Seven",
   "card.charta.green.eight": "Green Eight",
   "card.charta.green.nine": "Green Nine",
-  "card.charta.green.jack": "Green Ten",
-  "card.charta.green.queen": "Green Block",
-  "card.charta.green.king": "Green Reverse",
-  "card.charta.green.joker": "Green +2",
+  "card.charta.green.block": "Green Block",
+  "card.charta.green.reverse": "Green Reverse",
+  "card.charta.green.plus_two": "Green +2",
 
+  "card.charta.blue.zero": "Blue Zero",
   "card.charta.blue.one": "Blue One",
   "card.charta.blue.two": "Blue Two",
   "card.charta.blue.three": "Blue Three",
@@ -265,8 +272,35 @@
   "card.charta.blue.seven": "Blue Seven",
   "card.charta.blue.eight": "Blue Eight",
   "card.charta.blue.nine": "Blue Nine",
-  "card.charta.blue.jack": "Blue Ten",
-  "card.charta.blue.queen": "Blue Block",
-  "card.charta.blue.king": "Blue Reverse",
-  "card.charta.blue.joker": "Blue +2"
+  "card.charta.blue.block": "Blue Block",
+  "card.charta.blue.reverse": "Blue Reverse",
+  "card.charta.blue.plus_two": "Blue +2",
+
+  "charta.message.put_table_cloth": "You need to put a cloth on this table.",
+  "charta.message.not_playing_current": "You're not playing the current game.",
+  "charta.message.need_to_be_sat": "You need to be sat in the table to start a game.",
+  "charta.message.invalid_card_player": "You are not a valid Card Player.",
+  "charta.message.put_chair_cloth": "You need to put a cloth on this chair.",
+  "charta.message.game_started": "Game successfully started",
+  "charta.message.need_at_most": "You need at most %s players to play this game",
+  "charta.message.need_at_least": "You need at least %s players to play this game",
+  "charta.message.cant_play_deck": "You can't play this game with this deck.",
+  "charta.message.try_finding_another": "Try finding another one.",
+  "charta.message.table_unknown_game": "Table received an unknown game id.",
+  "charta.message.table_no_game": "Table received no game id.",
+  "charta.message.table_no_deck": "You need a deck to be able to play games.",
+  "charta.message.choose_game": "Please choose a game to play:",
+  "charta.message.not_enough_players": "There are not enough players for this game. (Minimum of %s)",
+  "charta.message.too_many_players": "There are too many players for this game. (Maximum of %s)",
+  "charta.message.you_won": "You won!",
+  "charta.message.you_lost": "You lost!",
+  "charta.message.draw": "Draw!",
+  "charta.message.congratulations": "Congratulations!",
+  "charta.message.won_the_match": "%s won the match.",
+  "charta.message.no_winner": "There were no winners.",
+  "charta.message.match_unable": "Match was unable to continue, either from lack of players or lack of cards.",
+  "charta.message.draws_left": "Draws left: %s",
+  "charta.message.your_turn": "It's your turn!",
+  "charta.message.other_turn": "It's %s's turn"
+
 }
