Fix translations, and deck screen.

--- a/src/main/resources/assets/charta/lang/en_us.json
+++ b/src/main/resources/assets/charta/lang/en_us.json
@@ -170,6 +170,7 @@
   "card.charta.spades.seven": "Seven of Spades",
   "card.charta.spades.eight": "Eight of Spades",
   "card.charta.spades.nine": "Nine of Spades",
+  "card.charta.spades.ten": "Ten of Spades",
   "card.charta.spades.jack": "Jack of Spades",
   "card.charta.spades.queen": "Queen of Spades",
   "card.charta.spades.king": "King of Spades",
@@ -184,6 +185,7 @@
   "card.charta.hearts.seven": "Seven of Hearts",
   "card.charta.hearts.eight": "Eight of Hearts",
   "card.charta.hearts.nine": "Nine of Hearts",
+  "card.charta.hearts.ten": "Ten of Hearts",
   "card.charta.hearts.jack": "Jack of Hearts",
   "card.charta.hearts.queen": "Queen of Hearts",
   "card.charta.hearts.king": "King of Hearts",
@@ -198,6 +200,7 @@
   "card.charta.clubs.seven": "Seven of Clubs",
   "card.charta.clubs.eight": "Eight of Clubs",
   "card.charta.clubs.nine": "Nine of Clubs",
+  "card.charta.clubs.ten": "Ten of Clubs",
   "card.charta.clubs.jack": "Jack of Clubs",
   "card.charta.clubs.queen": "Queen of Clubs",
   "card.charta.clubs.king": "King of Clubs",
@@ -212,6 +215,7 @@
   "card.charta.diamonds.seven": "Seven of Diamonds",
   "card.charta.diamonds.eight": "Eight of Diamonds",
   "card.charta.diamonds.nine": "Nine of Diamonds",
+  "card.charta.diamonds.ten": "Ten of Diamonds",
   "card.charta.diamonds.jack": "Jack of Diamonds",
   "card.charta.diamonds.queen": "Queen of Diamonds",
   "card.charta.diamonds.king": "King of Diamonds",
