--- a/src/main/resources/assets/charta/lang/en_us.json
+++ b/src/main/resources/assets/charta/lang/en_us.json
@@ -370,6 +370,7 @@
   "charta.message.draws_left": "Draws left: %s",
   "charta.message.your_turn": "It's your turn!",
   "charta.message.other_turn": "It's %s's turn",
-  "charta.message.dealing_cards": "Dealing cards..."
+  "charta.message.dealing_cards": "Dealing cards...",
+  "charta.message.next_player": "Next player is %s"
 
 }
